--- a/_config.yml
+++ b/_config.yml
@@ -126,7 +126,8 @@ news_limit: 5
 
 # Markdown and syntax highlight
 markdown: kramdown
-highlighter: rouge
+# highlighter: rouge
+highlighter: blue
 highlight_theme_light: github  # https://github.com/jwarby/jekyll-pygments-themes
 highlight_theme_dark: native  # https://github.com/jwarby/jekyll-pygments-themes
 kramdown:
