--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
           echo "SRC_BRANCH=${github.head_ref}" >> $GITHUB_OUTPUT
         fi
         #echo "::set-output name=DEPLOY_BRANCH::gh-pages"
-        echo "DEPLOY_BRANCH=gh-pages" >> $GITHUB_OUTPUT
+        echo "DEPLOY_BRANCH=${gh-pages}" >> $GITHUB_OUTPUT
     - name: Deploy website 
       run:  yes | bash bin/deploy --verbose ${{ steps.setup.outputs.NO_PUSH }}
                     --src ${{ steps.setup.outputs.SRC_BRANCH }} 
