--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,8 @@ jobs:
         git config --global user.name "GitHub Action"
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
         if [[ ${GITHUB_REF} = refs/pull/*/merge ]]; then # pull request
-          echo "SRC_BRANCH=${{ github.head_ref }}" >> $GITHUB_OUTPUT
+          #echo "SRC_BRANCH=${{ github.head_ref }}" >> $GITHUB_OUTPUT
+          echo "SRC_BRANCH=source" >> $GITHUB_OUTPUT
           echo "NO_PUSH=--no-push" >> $GITHUB_OUTPUT
         elif [[ ${GITHUB_REF} = refs/heads/* ]]; then # branch, e.g. master, source etc
           echo "SRC_BRANCH=${{ github.head_ref }}" >> $GITHUB_OUTPUT
