--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches:
       - master
-      - main
+      - gh-pages
   pull_request:
     branches:
       - master
-      - main
+      - gh-pages
 
 jobs:
   deploy:
@@ -40,11 +40,13 @@ jobs:
         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
         if [[ ${GITHUB_REF} = refs/pull/*/merge ]]; then # pull request
           #echo "SRC_BRANCH=${{ github.head_ref }}" >> $GITHUB_OUTPUT
-          echo "SRC_BRANCH=${GITHUB_HEAD_REF}" >> $GITHUB_OUTPUT
+          #echo "SRC_BRANCH=${GITHUB_HEAD_REF}" >> $GITHUB_OUTPUT
+          echo "SRC_BRANCH=master" >> $GITHUB_OUTPUT
           echo "NO_PUSH=--no-push" >> $GITHUB_OUTPUT
         elif [[ ${GITHUB_REF} = refs/heads/* ]]; then # branch, e.g. master, source etc
           #echo "SRC_BRANCH=${{ github.head_ref }}" >> $GITHUB_OUTPUT
-          echo "SRC_BRANCH=${GITHUB_HEAD_REF}" >> $GITHUB_OUTPUT
+          #echo "SRC_BRANCH=${GITHUB_HEAD_REF}" >> $GITHUB_OUTPUT
+          echo "SRC_BRANCH=master" >> $GITHUB_OUTPUT
         fi
         #echo "::set-output name=DEPLOY_BRANCH::gh-pages"
         #echo "DEPLOY_BRANCH=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
